--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,42 @@
 .list-group-item {
-  line-height: 2.5;
+    line-height: 2.5;
+}
+
+.nav-link {
+    color: black !important;
+    font-size: 20px;
+}
+
+.navbar {
+    box-shadow: 2px 2px lightgray;
+}
+
+.btn-success {
+    background-color: cornflowerblue;
+    border-color: cornflowerblue;
+}
+
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.jumbotron {
+    background-image: url(../images/perry-grone-lbLgFFlADrY-unsplash.jpg);
+    background-size: cover;
+    color: cornsilk;
+    height: 300px;
+}
+
+.btn:hover {
+    background-color: lightskyblue;
+}
+
+section {
+    background-color: lightsteelblue;
+}
+
+.card-deck {
+    padding: 40px 30px 0px 30px;
 }
