--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,150 @@
-<div id="home">
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+
+
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+<div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>The Dane Remix Team</h2>
-        <h4>Where is Dane??</h4>
-  
+    <h1 class="display-4">Help is Here</h1>
+    <p class="lead">There's a world of people willing to help with whatever you need...TODAY!</p>
+  </div>
+</div>
+
+
+<div class="container">
+
+
+  <div class="col-lg-12 text-center">
+    <h3>What do you need help with?</h3>
+    <hr>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8 center-block">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Help me with...">
+        <div class="input-group-append">
+          <button class="btn btn-success" type="submit">Find Help!</button>
+        </div>
       </div>
     </div>
   </div>
+
+  <br>
+
+
 </div>
+
+<section>
+
+  <div class="card-deck">
+  <div class="card">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Budget:</small>
+    </div>
+  </div>
+  <div class="card">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Budget:</small>
+    </div>
+  </div>
+  <div class="card">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Budget: </small>
+    </div>
+  </div>
+</div>
+<br>
+
+<div class="card-deck">
+  <div class="card">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Budget:</small>
+    </div>
+  </div>
+  <div class="card">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Budget:</small>
+    </div>
+  </div>
+  <div class="card">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Budget: </small>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
