--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,7 +41,7 @@
   <div class="row">
     <div class="col-md-8 center-block">
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Help me with...">
+        <input type="text" class="form-control" placeholder="Help me with..." id="help-input">
         <div class="input-group-append">
           <button class="btn btn-success" type="submit">Find Help!</button>
         </div>
@@ -60,31 +60,37 @@
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Install Ring Video Doorbell</h5>
+      <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget:</small>
+      <small class="text-muted">Budget: $50</small>
+         <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Pick Up a Couch</h5>
+        <hr>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget:</small>
+      <small class="text-muted">Budget: $50</small>
+      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Build a website</h5>
+        <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget: </small>
+      <small class="text-muted">Budget: $200 </small>
+      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
     </div>
   </div>
 </div>
@@ -94,31 +100,38 @@
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Build my resume</h5>
+        <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget:</small>
+      <small class="text-muted">Budget: $25</small>
+      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Fix my flat tire!</h5>
+        <hr>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget:</small>
+      <small class="text-muted">Budget: $100</small>
+      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Help me grocery shop</h5>
+        <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget: </small>
+      <small class="text-muted">Budget: $25 </small>
+      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+
     </div>
   </div>
 </div>
@@ -126,6 +139,90 @@
 <br>
 
 </section>
+
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <!-- Content -->
+        <h5 class="text-uppercase">Footer Content</h5>
+        <p>Here you can use rows and columns to organize your footer content.</p>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://teamdaneremix-project2.herokuapp.com/"> NeedHelp, Inc.</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 
 
