--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -56,6 +56,21 @@
 
 <section>
 
+<div class="row" id="sort-row">
+<div class="btn-group" >
+  <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="sort">
+    Sort By:
+  </button>
+
+ 
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Newest</a>
+    <a class="dropdown-item" href="#">Budget High</a>
+    <a class="dropdown-item" href="#">Budget Low</a>
+  </div>
+</div>
+</div>
+
   <div class="card-deck">
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
