Updated help cards + responsive adjustments

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -76,36 +76,43 @@
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h5 class="card-title">Install Ring Video Doorbell</h5>
+       <small>Requestor: Joe Smith</small>
       <hr>
+     
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
+        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
       <small class="text-muted">Budget: $50</small>
-         <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+       
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h5 class="card-title">Pick Up a Couch</h5>
+       <small>Requestor: Joe Smith</small>
         <hr>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer">
+       <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
       <small class="text-muted">Budget: $50</small>
-      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+     
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h5 class="card-title">Build a website</h5>
+       <small>Requestor: Joe Smith</small>
         <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer">
+       <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
       <small class="text-muted">Budget: $200 </small>
-      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+     
     </div>
   </div>
 </div>
@@ -116,36 +123,42 @@
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h5 class="card-title">Build my resume</h5>
+       <small>Requestor: Joe Smith</small>
         <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
+       <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
       <small class="text-muted">Budget: $25</small>
-      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+     
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h5 class="card-title">Fix my flat tire!</h5>
+       <small>Requestor: Joe Smith</small>
         <hr>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer">
+        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
       <small class="text-muted">Budget: $100</small>
-      <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+    
     </div>
   </div>
   <div class="card">
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h5 class="card-title">Help me grocery shop</h5>
+       <small>Requestor: Joe Smith</small>
         <hr>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Budget: $25 </small>
       <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+      <small class="text-muted">Budget: $25 </small>
+      
 
     </div>
   </div>
