--- a/views/requestersignup.handlebars
+++ b/views/requestersignup.handlebars
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-lg navbar-dark bg-light">
         <a class="navbar-brand" href="#">
-            <img src="/public/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
+            <img src="/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -159,7 +159,7 @@
         <div class="col-lg-12" id="mac-section">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="/public/images/needhelpscreens.png" alt="">
+                    <img src="/images/needhelpscreens.png" alt="">
                 </div>
                 <div class="col-lg-6" id="how-it-works-col">
                     <h1 class="d-inline-block">How NeedHelp Works:</h1>
