--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
 <!--script stuff for notifications-->
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-{<script>
+<script>
   var OneSignal = window.OneSignal || [];
   OneSignal.push(function() {
     OneSignal.init({
@@ -20,7 +20,7 @@
       },
     });
   });
-</script>}
+</script>
 
 </head>
 
