--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,17 +9,15 @@
   <title>Home Page</title>
 
 <!--script stuff for notifications-->
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  var OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "a8dc9719-288c-4e81-adf4-e69fcefe3976",
-      notifyButton: {
-        enable: true,
-      },
-    });
-  });
+      <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function() {
+            OneSignal.init({
+                appId: "a8dc9719-288c-4e81-adf4-e69fcefe3976",
+            });
+        });
+    </script>
 </script>
 
 </head>
@@ -35,3 +33,32 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </html>
+
+<script>
+    OneSignal.push(function() {
+        /* These examples are all valid */
+        var isPushSupported = OneSignal.isPushNotificationsSupported();
+        if (isPushSupported) {
+            // Push notifications are supported
+            console.log("supported")
+            OneSignal.isPushNotificationsEnabled(function(isEnabled) {
+                if (isEnabled) {
+                    console.log("Push notifications are enabled!");
+                    OneSignal.getUserId(function(userId) {
+                        console.log("OneSignal User ID:", userId);
+                        // (Output) OneSignal User ID: 270a35cd-4dda-4b3f-b04e-41d7463a2316    
+                        document.getElementById('user_id').value = userID ;
+                });
+                } else {
+                    console.log("Push notifications are not enabled yet.");
+                    OneSignal.push(function() {
+                        OneSignal.showNativePrompt();
+                    });
+                }
+            });
+        } else {
+            // Push notifications are not supported
+            console.log("not supported")
+        }
+    });
+</script>
