Added html routes for signup

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
   <div class="row">
     <div class="col-md-8 center-block">
      
-          <button type="button" class="btn btn-primary btn-lg btn-block" id="help-btn">Find Help!</button>
+          <button type="button" class="btn btn-primary btn-lg btn-block" id="help-btn" onclick="window.location.href='/helpersignup'">Find Help!</button>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
           This content is a little bit longer.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
         <small class="text-muted">Budget: $50</small>
 
       </div>
@@ -108,7 +108,7 @@
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
         <small class="text-muted">Budget: $50</small>
 
       </div>
@@ -123,7 +123,7 @@
           This card has even longer content than the first to show that equal height action.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
         <small class="text-muted">Budget: $200 </small>
 
       </div>
@@ -142,7 +142,7 @@
           This content is a little bit longer.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
         <small class="text-muted">Budget: $25</small>
 
       </div>
@@ -156,7 +156,7 @@
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
         <small class="text-muted">Budget: $100</small>
 
       </div>
@@ -171,7 +171,7 @@
           This card has even longer content than the first to show that equal height action.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
         <small class="text-muted">Budget: $25 </small>
 
 
