--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -120,13 +120,13 @@
     }
     
     #req-signup-body {
-        background-image: url(/public/images/anna-earl-cTtE2FlIRoU-unsplash.jpg);
+        background-image: url(../images/anna-earl-cTtE2FlIRoU-unsplash.jpg);
         background-position: center;
         background-size: cover;
     }
     
     #gig-create-body {
-        background-image: url(/public/images/priscilla-du-preez-xLKg2s4rXWE-unsplash.jpg);
+        background-image: url(../images/priscilla-du-preez-xLKg2s4rXWE-unsplash.jpg);
         background-position: center;
         background-size: cover;
     }
