created login page and updated all routes

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -31,9 +31,9 @@
                 <div class="col-10 col-md-8 col-lg-6" id="form-bc">
                     <!-- Form -->
                     <form class="form-example" action="" method="post">
-                        <h1>Find Help for Anything</h1>
+                        <h1>Join NeedHelp Today</h1>
                         <hr>
-                        <p class="description">Easily find help for any task, project or activity</p>
+                        <p class="description">Easily provide or get help with tasks, projects and/or activities</p>
                         <!-- Input fields -->
                         <div class="form-group row" id="signup-form">
 
@@ -165,10 +165,10 @@
                     <h1 class="d-inline-block">How NeedHelp Works:</h1>
 
                     <ul id="how-it-works-list">
-                        <li>Register to be an active NeedHelp Requestor</li>
-                        <li>Once registered, select Find Help! from the home page</li>
-                        <li>Create your first help request</li>
-                        <li>We'll notify you when your request has been claimed!</li>
+                        <li>Register to be an active NeedHelp Helper and/or Requestor</li>
+                        <li>Once registered, start or claim an open help request</li>
+                        <li>Track open, claimed or created help requests</li>
+                        <li>NeedHelp will then connect open requests with qualified helpers! </li>
                     </ul>
                 </div>
             </div>
