--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <a class="navbar-brand" href="/">
     <img src="/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
@@ -9,7 +10,7 @@
   <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" href="/login">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About</a>
@@ -43,7 +44,7 @@
   <div class="row">
     <div class="col-md-8 center-block">
      
-          <button type="button" class="btn btn-primary btn-lg btn-block" id="help-btn" onclick="window.location.href='/helpersignup'">Find Help!</button>
+          <button type="button" class="btn btn-primary btn-lg btn-block" id="help-btn" onclick="window.location.href='/login'">Find Help!</button>
         </div>
       </div>
     </div>
@@ -94,7 +95,7 @@
           This content is a little bit longer.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
         <small class="text-muted">Budget: $50</small>
 
       </div>
@@ -108,7 +109,7 @@
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
         <small class="text-muted">Budget: $50</small>
 
       </div>
@@ -123,7 +124,7 @@
           This card has even longer content than the first to show that equal height action.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
         <small class="text-muted">Budget: $200 </small>
 
       </div>
@@ -142,7 +143,7 @@
           This content is a little bit longer.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
         <small class="text-muted">Budget: $25</small>
 
       </div>
@@ -156,7 +157,7 @@
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
         <small class="text-muted">Budget: $100</small>
 
       </div>
@@ -171,7 +172,7 @@
           This card has even longer content than the first to show that equal height action.</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/reqsignup'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
         <small class="text-muted">Budget: $25 </small>
 
 
