Added styling to the account pages, deleted test pages

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,7 +2,8 @@
         line-height: 2.5;
     }
     
-    .nav-link {
+    .nav-link,
+    .tab {
         color: black !important;
         font-size: 20px;
     }
