--- a/views/gigcreate.handlebars
+++ b/views/gigcreate.handlebars
@@ -56,6 +56,14 @@
                         <div class="form-group row">
 
                             <div class="col-sm-12">
+                                <input type="email" class="form-control" id="gig-title" placeholder="Request Title">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+
+                            <div class="col-sm-12">
                                 <input type="email" class="form-control" id="description" placeholder="Request Description">
                             </div>
                         </div>
