--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -44,7 +44,7 @@
                 <h2>Contact: thisisanemail@gmail.com</h2>
               </div>
               <div id="menu2" class="tab-pane fade">
-                <h3>Gigs You Claimed</h3>
+                <h3 style="text-align: center;">Gigs You Claimed</h3>
                 <div class="card-deck">
                     <div class="card">
                       
@@ -65,7 +65,7 @@
                   </div>
               </div>
               <div id="menu3" class="tab-pane fade">
-                <h3>Gigs You Posted</h3>
+                <h3 style="text-align: center;">Gigs You Posted</h3>
                 <div class="card-deck">
                     <div class="card">
                       
