--- a/views/gigview.handlebars
+++ b/views/gigview.handlebars
@@ -14,8 +14,35 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
 
-
                 </li>
             </ul>
         </div>
     </nav>
+
+ <div class="card-deck">
+    <div class="card">
+      {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+      <div class="card-body">
+        <h5 class="card-title"><span>Title:</span> {{this.title}}</h5>
+        <small><span>Requester:</span>{{this.poster}}</small>
+        <hr>
+
+        <p><span class="label">Description:</span> {{this.description}}</p>
+         <p><span class="label">Time:</span> {{this.time}}</p>
+     <p><span class="label">Budget:</span> {{this.budget}}</p>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-success" type="submit" id="approve" onclick="window.location.href='/account'">Accept!</button>
+
+        <button class="btn btn-success" type="submit" id="nope" onclick="window.location.href='/'">No Thanks</button>
+       
+
+      </div>
+    </div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/index.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
