--- a/views/gigview.handlebars
+++ b/views/gigview.handlebars
@@ -23,7 +23,7 @@
     <div class="card">
       {{!-- <img src="..." class="card-img-top" alt="..."> --}}
       <div class="card-body">
-        <h5 class="card-title"><span>Title:</span> {{this.title}}</h5>
+        <h5 class="card-this."><span>Title:</span> {{this.title}}</h5>
         <small><span>Requester:</span>{{this.poster}}</small>
         <hr>
 
