--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -81,14 +81,26 @@
 
   </div>
 
-  <ul>
-  {{#each Posts}}
-  	<li>
-  	   <p>ID: {{./this.id}}</p>
-       <p>Category: {{./this.category}}</p>
-  	</li>
+  
+  {{#each gigs}}
+<div class="card-deck">
+    <div class="card">
+      {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+      <div class="card-body">
+        <h5 class="card-title">{{this.title}}</h5>
+        <small>Requestor: {{this.poster}}</small>
+        <hr>
+
+        <p class="card-text">{{this.description}}</p>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
+        <small class="text-muted">Budget: {{budget}}</small>
+
+      </div>
+    </div>
   {{/each}}
-</ul>
+
 
 
   <div class="card-deck">
