--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -87,18 +87,19 @@
     <div class="card">
       {{!-- <img src="..." class="card-img-top" alt="..."> --}}
       <div class="card-body">
-        <h5 class="card-title">{{this.title}}</h5>
-        <small>Requestor: {{this.poster}}</small>
+        <h5 class="card-title">{{title}}</h5>
+        <small>Requestor: {{poster}}</small>
         <hr>
 
-        <p class="card-text">{{this.description}}</p>
+        <p class="card-text">{{description}}</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/login'">I Can Help!</button>
+        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/gigview/{{id}}'">I Can Help!</button>
         <small class="text-muted">Budget: {{budget}}</small>
 
       </div>
     </div>
+</div>
   {{/each}}
 
 
