--- a/views/gigcreate.handlebars
+++ b/views/gigcreate.handlebars
@@ -37,7 +37,7 @@
                         <div class="form-group row">
 
                             <div class="col-sm-12">
-                                <select id="inputState" class="form-control">
+                                <select id="category" class="form-control">
                                     <option selected>Help Category</option>
                                 <option value="HR">Home Repair</option>
                                 <option value="WD">Web Development</option>
@@ -77,7 +77,7 @@
 
                             <div class="form-group col-md-8">
 
-                                <select id="inputState" class="form-control">
+                                <select id="time" class="form-control">
                                     <option selected>Estimated Time</option>
                                     <option value="One">Under 1 hour</option>
                                     <option value="Two">1 - 2 hours</option>
@@ -203,3 +203,4 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/js/index.js"></script>
+     <script src="/js/create.js"></script>
