updated gigview w/ gigtime

--- a/views/gigview.handlebars
+++ b/views/gigview.handlebars
@@ -28,7 +28,7 @@
         <hr>
 
         <p><span class="label">Description:</span> {{gigs.description}}</p>
-         <p><span class="label">Time:</span> {{gigs.time}}</p>
+         <p><span class="label">Time:</span> {{gigs.gigtime}}</p>
      <p><span class="label">Budget:</span> {{gigs.budget}}</p>
       </div>
       <div class="card-footer">
