--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -166,3 +166,6 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
+
+{{!-- Login file --}}
+<script src="./js/login.js"></script>
