column limit for home page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -81,6 +81,8 @@
 
   </div>
 
+ <div class="card-columns">
+
   <div class="card-deck">
   {{#each gigs}}
 
@@ -102,6 +104,7 @@
 
   {{/each}}
   </div>
+    </div>
 
 
 
@@ -198,6 +201,7 @@
 {{!-- JQUERY FILE --}}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./js/user-info.js"></script>
+<script src="./js/button.js"></script>
 
 
 
