--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <a class="navbar-brand" href="/">
     <img src="/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
@@ -37,20 +36,21 @@
 
   <div class="col-lg-12 text-center">
     <h3>Help is one click away</h3>
-     <h5>Click below to request help with any task, project or activity</h5>
+    <h5>Click below to request help with any task, project or activity</h5>
     <hr>
   </div>
 
   <div class="row">
     <div class="col-md-8 center-block">
-     
-          <button type="button" class="btn btn-primary btn-lg btn-block" id="help-btn" onclick="window.location.href='/login'">Find Help!</button>
-        </div>
-      </div>
+
+      <button type="button" class="btn btn-primary btn-lg btn-block" id="help-btn"
+        onclick="window.location.href='/login'">Find Help!</button>
     </div>
   </div>
+</div>
+</div>
 
-  <br>
+<br>
 
 
 </div>
@@ -83,32 +83,35 @@
 
 
 
-  <div class="card-deck">
-  {{#each gigs}}
+  <div class="card-deck ">
+    {{#each gigs}}
 
-    <div class="card">
-      {{!-- <img src="..." class="card-img-top" alt="..."> --}}
-      <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
-        <small>Requestor: {{poster}}</small>
-        <hr>
 
-        <p class="card-text">{{description}}</p>
+      <div class="card col-lg-4" style="min-width: 20rem;" id="cards">
+        {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+        <div class="card-body">
+          <h5 class="card-title">{{title}}</h5>
+          <small>Requestor: {{poster}}</small>
+          <hr>
+
+          <p class="card-text">{{description}}</p>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/gigview/{{id}}'">I Can
+            Help!</button>
+          <small class="text-muted">Budget: {{budget}}</small>
+
+        </div>
       </div>
-      <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="help" onclick="window.location.href='/gigview/{{id}}'">I Can Help!</button>
-        <small class="text-muted">Budget: {{budget}}</small>
+   
 
-      </div>
-    </div>
-
-  {{/each}}
+    {{/each}}
   </div>
 
 
 
 
- <br>
+  <br>
 
 </section>
 
