--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" id="loginout" href="/login">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About</a>
