--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -13,6 +13,9 @@
               <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
+                    <a class="nav-link" href="#">My Account</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
       
