--- a/views/gigview.handlebars
+++ b/views/gigview.handlebars
@@ -11,6 +11,9 @@
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">My Account</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
 
