--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,9 @@
         <a class="nav-link" id="loginout" href="/login">Login</a>
       </li>
       <li class="nav-item">
+                    <a class="nav-link" href="#">My Account</a>
+                </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">About</a>
       </li>
 
