--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,6 +12,9 @@
                 <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
+                    <a class="nav-link" href="#">My Account</a>
+                </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
             </li>
 
