hide password entry

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -50,7 +50,7 @@
                     <div class="form-group row">
 
                         <div class="col-sm-12">
-                            <input type="tel" class="form-control" id="login-password" placeholder="Password">
+                            <input type="password" class="form-control" id="login-password" placeholder="Password">
                         </div>
                     </div>
 
