--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
         <a class="nav-link" id="loginout" href="/login">Login</a>
       </li>
       <li class="nav-item">
-                    <a class="nav-link" href="#">My Account</a>
+                    <a class="nav-link" id="account" href="/login">My Account</a>
                 </li>
    
 
