--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,113 +1,117 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
+  <a class="navbar-brand" href="/">
+    <img src="/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" id="loginout" href="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="account" href="#">My Account</a>
+      </li>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-        <a class="navbar-brand" href="/">
-          <img src="/images/needhelpfulllogo.png" width="200" height="45" class="d-inline-block align-center" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="#">My Account</a>
-                </li>
-          
-      
-          </ul>
-        </div>
-      </nav>
-      
-      
-      <div style="margin: 5%">
-        <div class="container">    
-          <h1 class="display-4 text-center" style="color: rgb(4, 4, 97);">Hello {{user.firstname}}</h1>
-        </div>
-      </div> 
-      <section>
 
-        <div class="container" >
-          <div>
-            <ul class="nav nav-tabs justify-content-center nav-fill flex-column flex-lg-row" style="margin-bottom: 20px; font-size: larger;">
-            
-              <li id="tab" class="flex-sm-fill text-sm-center nav-link Active"><a data-toggle="tab" href="#menu1">Info </a></li><br>
-              <li id="tab" class="flex-sm-fill text-sm-center nav-link"><a data-toggle="tab" href="#menu2" style="margin: 10px;">Gigs Claimed<span class="badge badge-light">{{claimedGigs.length}}</span></a></li><br>
-              <li id="tab" class="flex-sm-fill text-sm-center nav-link"><a data-toggle="tab" href="#menu3">Gigs Posted<span class="badge badge-light">{{postedGigs.length}}</span></a></li><br>
-            </ul>
-        </div>
-            <div class="tab-content">
-             
-              <div id="menu1" class="tab-pane active align-center card">
-                <h2>Name: {{user.firstname}} {{user.lastname}}</h2>
-                <h2>Contact: {{user.email}}</h2>
-              </div>
-              <div id="menu2" class="tab-pane fade">
-                <h3 style="text-align: center;">Gigs You Claimed</h3>
-                  <div class="card-deck">
-  {{#each claimedGigs}}
-
-    <div class="card" style="margin: 3%;">
-      {{!-- <img src="..." class="card-img-top" alt="..."> --}}
-      <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
-        <small>Requestor: {{poster}}</small>
-        <hr>
-
-        <p class="card-text">{{description}}</p>
-      </div>
-      <div class="card-footer">
-        
-        <small class="text-muted">Budget: {{budget}}</small>
-
-      </div>
-    </div>
-
-  {{/each}}
+    </ul>
   </div>
-              </div>
-              <div id="menu3" class="tab-pane fade">
-                <h3 style="text-align: center;">Gigs You Posted</h3>
-{{#each postedGigs}}
+</nav>
 
-    <div class="card" style="margin: 3%;">
-      {{!-- <img src="..." class="card-img-top" alt="..."> --}}
-      <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
-        <small>Requestor: {{poster}}</small>
-        <hr>
 
-        <p class="card-text">{{description}}</p>
-      </div>
-      <div class="card-footer">
-        
-        <small class="text-muted">Budget: {{budget}}</small><br>
-        {{#if claimed}}Claimed by: {{helper.firstname}} {{helper.email}} {{else}}No one has claimed this gig...{{/if}}
+<div style="margin: 5%">
+  <div class="container">
+    <h1 class="display-4 text-center" style="color: rgb(4, 4, 97);">Hello {{user.firstname}}</h1>
+  </div>
+</div>
+<section>
 
-      </div>
+  <div class="container">
+    <div>
+      <ul class="nav nav-tabs justify-content-center nav-fill flex-column flex-lg-row"
+        style="margin-bottom: 20px; font-size: larger;">
+
+        <li id="tab" class="flex-sm-fill text-sm-center nav-link Active"><a data-toggle="tab" href="#menu1">Info </a>
+        </li><br>
+        <li id="tab" class="flex-sm-fill text-sm-center nav-link"><a data-toggle="tab" href="#menu2"
+            style="margin: 10px;">Gigs Claimed<span class="badge badge-light">{{claimedGigs.length}}</span></a></li><br>
+        <li id="tab" class="flex-sm-fill text-sm-center nav-link"><a data-toggle="tab" href="#menu3">Gigs Posted<span
+              class="badge badge-light">{{postedGigs.length}}</span></a></li><br>
+      </ul>
     </div>
-  {{/each}}
-              </div>
+    <div class="tab-content">
+
+      <div id="menu1" class="tab-pane active align-center card">
+        <h2>Name: {{user.firstname}} {{user.lastname}}</h2>
+        <h2>Contact: {{user.email}}</h2>
+      </div>
+      <div id="menu2" class="tab-pane fade">
+        <h3 style="text-align: center;">Gigs You Claimed</h3>
+        <div class="card-deck">
+          {{#each claimedGigs}}
+
+          <div class="card" style="margin: 3%;">
+            {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+            <div class="card-body">
+              <h5 class="card-title">{{title}}</h5>
+              <small>Requestor: {{poster}}</small>
+              <hr>
+
+              <p class="card-text">{{description}}</p>
+            </div>
+            <div class="card-footer">
+
+              <small class="text-muted">Budget: {{budget}}</small>
+
             </div>
           </div>
-         <div style="height: 60px;"></div>
+
+          {{/each}}
+        </div>
+      </div>
+      <div id="menu3" class="tab-pane fade">
+        <h3 style="text-align: center;">Gigs You Posted</h3>
+        {{#each postedGigs}}
+
+        <div class="card" style="margin: 3%;">
+          {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+          <div class="card-body">
+            <h5 class="card-title">{{title}}</h5>
+            <small>Requestor: {{poster}}</small>
+            <hr>
+
+            <p class="card-text">{{description}}</p>
+          </div>
+          <div class="card-footer">
+
+            <small class="text-muted">Budget: {{budget}}</small><br>
+            {{#if claimed}}Claimed by: {{helper.firstname}} {{helper.email}} {{else}}No one has claimed this
+            gig...{{/if}}
+
+          </div>
+        </div>
+        {{/each}}
+      </div>
+    </div>
+  </div>
+  <div style="height: 60px;"></div>
 
 </section>
 
-      
- <!-- Footer -->
+
+<!-- Footer -->
 <footer class="page-footer font-small blue">
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://teamdaneremix-project2.herokuapp.com/"> NeedHelp, Inc.</a>
-    </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://teamdaneremix-project2.herokuapp.com/"> NeedHelp, Inc.</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 
 
@@ -132,6 +136,17 @@
 <script src="/js/index.js"></script>
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+{{!-- JavaScript for the page --}}
+<script>
+  $(document).ready(function () {
+    $("#loginout").attr("href", "/logout").text("Logout");
+    $("#account").attr("href", "/account");
+  })
+</script>
