Putting document.ready in claim.js
I noticed that when a user is NOT logged in the button will take them to the account page. I am going to put in a code that will check to see if someone is logged in. If they are not the Accept! button will redirect them to login.

--- a/views/gigview.handlebars
+++ b/views/gigview.handlebars
@@ -33,7 +33,7 @@
      <p><span class="label">Budget:</span> {{gigs.budget}}</p>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success" type="submit" id="approve" onclick="window.location.href='/account'" data-id="{{gigs.id}}">Accept!</button>
+        <button class="btn btn-success" type="submit" id="approve" onclick="window.location.href='#'" data-id="{{gigs.id}}">Accept!</button>
 
         <button class="btn btn-success" type="submit" id="nope" onclick="window.location.href='/'">No Thanks</button>
        
