--- a/views/gigcreate.handlebars
+++ b/views/gigcreate.handlebars
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Account</a>
+                    <a class="nav-link" href="/account">My Account</a>
                 </li>
            
 
