--- a/views/gigview.handlebars
+++ b/views/gigview.handlebars
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" id="loginout" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Account</a>
+                    <a class="nav-link" id="account" href="/login">My Account</a>
                 </li>
               
 
