--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -56,7 +56,8 @@
             {{!-- <img src="..." class="card-img-top" alt="..."> --}}
             <div class="card-body">
               <h5 class="card-title">{{title}}</h5>
-              <small>Requestor: {{poster}}</small>
+              <small>Requestor: {{poster}}</small> <br>
+              <small>{{poster}} will contact you via email with details!</small>
               <hr>
 
               <p class="card-text">{{description}}</p>
@@ -86,9 +87,10 @@
           </div>
           <div class="card-footer">
 
-            <small class="text-muted">Budget: {{budget}}</small><br>
-            {{#if claimed}}Claimed by: {{helper.firstname}} {{helper.email}} {{else}}No one has claimed this
-            gig...{{/if}}
+            
+            {{#if claimed}}Claimed by: {{helper.firstname}} <br>{{helper.email}} <br>{{else}}No one has claimed this
+            gig...{{/if}}<br>
+            <small class="text-muted">Budget: {{budget}}</small>
 
           </div>
         </div>
